fix: Phase 4 3 项行为修复 — getThreads 排序/消息列表 reactions/ThreadVO creator
- getThreads: 按 last_active DESC 排序（方案 4.6.2）
- buildMessageVOList: 批量查询 Reaction 并分组组装（方案 4.7.4）
- toThreadVO: 设置 creator UserVO（方案 4.9.3）
- MessageAdapter 签名改为接收预分组的 List<ReactionVO>

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>